@@ -1,5 +1,10 @@
 2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-hkp-source.c: Fix crasher when resolving
+    the host name fails. Fixes #334413
+    
+2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
+
     * src/seahorse-key-op.c:
     * src/seahorse-key-op.h:
     * src/seahorse-sign.c: Prompt for signer when signing a key 
